2008-07-15  Bruno Haible  <bruno@clisp.org>

	Fix bug introduced on 2003-03-11.
	* encoding.d (uni16_mblen): Make consistent with uni16be_mbstowcs and
	uni16le_mbstowcs.
	(uni32be_mblen): Make consistent with uni32be_mbstowcs.
	(uni32le_mblen): Make consistent with uni32le_mbstowcs.
	(CONVERT-STRING-FROM-BYTES): Revert last commit.

2008-07-15  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (fixperms): undo the 2008-05-15 patch:
	cannot look above the top-level directory

2008-07-15  Bruno Haible  <bruno@clisp.org>

	* makemake.in (interpreted.mem, halfcompiled.mem): Depend on
	config.lisp.
	(clean5): Don't remove config.lisp.
	(clean6): Remove config.lisp.

2008-07-15  Bruno Haible  <bruno@clisp.org>

	* encoding.d: Verify already at compile time that HAVE_GOOD_ICONV
	is set rather than crashing at initialization time.

2008-07-15  Bruno Haible  <bruno@clisp.org>

	* makemake.in (clean4): Don't remove all the $SUBDIRS but only the
	built files inside them.

2008-07-15  Sam Steingold  <sds@gnu.org>

	* spvw_debug.d (nobject_out1): updated hash-table output for the
	removal of the ht_freelist (2004-05-09 1.49 2004/06/04)

2008-07-15  Sam Steingold  <sds@gnu.org>

	* encoding.d (CONVERT-STRING-FROM-BYTES): check (cptr == cendptr)
	after (bptr == bendptr)

2008-07-15  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (number_of_conditions_defined_in_c): rename from
	condition_for_broken_compilers_that_dont_like_trailing_commas
	* error.d (SYSTEM::%DEFCLCS): use it to check whether the argument
	is consistent with constsym.d

2008-07-14  Sam Steingold  <sds@gnu.org>

	src/m4/sigsegv.m4 --> src/glm4/libsigsegv.m4
	* Makefile.devel (gnulib-imported): also import libsigsegv
	* configure: use gl_cv_lib_sigsegv instead of cl_cv_lib_sigsegv
	* configure.in: use gl_LIBSIGSEGV instead of CL_SIGSEGV
	* lispbibl.d: use HAVE_LIBSIGSEGV instead of NO_SIGSEGV
	* makemake.in (XCFLAGS): do not add NO_SIGSEGV
	* src/m4/sigsegv.m4: remove
	* src/glm4/libsigsegv.m4: add